[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/MenuController.gd" type="Script" id=1]
[ext_resource path="res://Themes/Menus.tres" type="Theme" id=2]
[ext_resource path="res://Sprites/Etc/mechconcept.jpg" type="Texture" id=3]
[ext_resource path="res://Sprites/Etc/icon.png" type="Texture" id=4]
[ext_resource path="res://Fonts/BrokenFontTitle.tres" type="DynamicFont" id=7]
[ext_resource path="res://Fonts/BrokenFontSmall.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scripts/ContinueButton.gd" type="Script" id=10]

[node name="MenuRoot" type="CanvasLayer"]
layer = 2
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 2 )

[node name="FullBG" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 0.239216, 0.172549, 0.207843, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="BG" type="ColorRect" parent="Control/CenterContainer"]
visible = false
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
color = Color( 0.168627, 0.160784, 0.701961, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer"]
margin_left = 51.0
margin_top = 44.0
margin_right = 973.0
margin_bottom = 556.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
margin_right = 406.0
margin_bottom = 512.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_right = 406.0
margin_bottom = 64.0

[node name="Logo" type="TextureRect" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 16, 16 )
size_flags_vertical = 3
texture = ExtResource( 4 )

[node name="NameOfGame" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 68.0
margin_top = 16.0
margin_right = 406.0
margin_bottom = 48.0
rect_min_size = Vector2( 100, 30 )
custom_fonts/font = ExtResource( 7 )
text = "Hive Stampers"
align = 1
valign = 1

[node name="MenuOptions" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2"]
margin_top = 173.0
margin_right = 160.0
margin_bottom = 406.0
size_flags_horizontal = 0
size_flags_vertical = 6
alignment = 1

[node name="ContinueButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
margin_right = 160.0
margin_bottom = 39.0
rect_min_size = Vector2( 160, 39 )
text = "Mission Select"
script = ExtResource( 10 )

[node name="Label" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
visible = false
margin_top = 89.0
margin_right = 406.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 50 )

[node name="NewGameButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
visible = false
margin_top = 143.0
margin_right = 100.0
margin_bottom = 182.0
rect_min_size = Vector2( 100, 39 )
text = "NewGame"

[node name="Label2" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
margin_top = 43.0
margin_right = 160.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 50 )

[node name="OptionsButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
margin_top = 97.0
margin_right = 160.0
margin_bottom = 136.0
rect_min_size = Vector2( 100, 39 )
text = "Options"

[node name="Label3" type="Label" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
margin_top = 140.0
margin_right = 160.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 50 )

[node name="QuitButton" type="Button" parent="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions"]
margin_top = 194.0
margin_right = 160.0
margin_bottom = 233.0
rect_min_size = Vector2( 80, 39 )
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer/HBoxContainer"]
visible = false
margin_left = 410.0
margin_right = 410.0
margin_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="Control/CenterContainer/HBoxContainer"]
margin_left = 410.0
margin_right = 922.0
margin_bottom = 512.0
size_flags_horizontal = 3

[node name="Characters" type="TextureRect" parent="Control/CenterContainer/HBoxContainer/CenterContainer"]
margin_right = 512.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 512 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Version" type="Label" parent="Control"]
margin_left = 51.0
margin_top = 538.0
margin_right = 457.0
margin_bottom = 556.0
custom_fonts/font = ExtResource( 8 )
text = "Ver 0.0.0"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/ContinueButton" to="." method="_on_ContinueButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/NewGameButton" to="." method="_on_NewGameButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/OptionsButton" to="." method="_on_OptionsButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="focus_entered" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/QuitButton" to="." method="_on_QuitButton_focus_entered"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/QuitButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Control/CenterContainer/HBoxContainer/VBoxContainer2/MenuOptions/QuitButton" to="." method="_on_QuitButton_pressed"]
